welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:5: error: '<-' expected but ')' found.
left();avance();right();for(a<_1 to 3) {faireV();}
                                     ^PictureMono:6: error: illegal start of simple expression
}
^