welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def faireV() {avance();baisseBrosse();leveBrosse();avance();}
for(a<-1 to 2) {faireV();}
left();avance();right();for(a<_1 to 3) {faireV();}
}
